--- a/src/app/admin/users/users-list/users-list.component.html
+++ b/src/app/admin/users/users-list/users-list.component.html
@@ -9,7 +9,7 @@
                 class="tw-bg-primary tw-text-white  tw-py-2 tw-min-h-[35px] min-md:tw-min-w-[120px] max-sm:tw-w-full tw-rounded-l max-lg:tw-w-full"
                 type="button"
             >
-                Add Berth
+                Add User
             </button>
             <button
                 [disabled]="(isLoading$ | async) || false"
