--- a/src/app/shared/components/input-wrapper/iconic-input-wrapper.component.html
+++ b/src/app/shared/components/input-wrapper/iconic-input-wrapper.component.html
@@ -5,7 +5,7 @@
   class="iconic-layout-wrapper">
   <div class="input-container {{inputContainerClass}}" [ngStyle]="{'paddingLeft.rem': leftIcon ? 'inherit' : 1.2 }">
     <!-- <img *ngIf="layoutSvg" [src]="layoutSvg" alt="icon" class="tw-mx-2"> -->
-    <img *ngIf="leftSvg" [src]="leftSvg" alt="icon" class="tw-mx-2">
+    <img *ngIf="leftSvg" [src]="leftSvg" alt="icon" class="tw-mx-2 tw-max-h-5 tw-max-w-10">
     <fa-icon *ngIf="leftIcon" [icon]="leftIcon" size="lg" class="icon"></fa-icon>
     <ng-content select="input[inputRef]"></ng-content>
     <ng-container *ngIf="appendedTemplate" [ngTemplateOutlet]="appendedTemplate"></ng-container>
