--- a/src/app/shared/components/select-wrapper/iconic-select-wrapper.component.html
+++ b/src/app/shared/components/select-wrapper/iconic-select-wrapper.component.html
@@ -1,6 +1,7 @@
 <div [class.valid]="isValid === true && isTouched" [class.invalid]="isValid === false && isTouched"
      [class.disabled]="isDisabled" class="iconic-layout-wrapper">
   <div class="input-container">
+    <img *ngIf="leftSvg" [src]="leftSvg" alt="icon" class="tw-mx-2 tw-max-h-5 tw-max-w-10">
     <fa-icon *ngIf="leftIcon" [icon]="leftIcon" size="lg" class="icon"></fa-icon>
     <div class="select-container">
       <ng-content select="select[inputRef]"></ng-content>
