--- a/src/app/admin/ports/no-ports/no-ports.component.html
+++ b/src/app/admin/ports/no-ports/no-ports.component.html
@@ -1,6 +1,6 @@
 <full-empty-container>
     <div class="tw-flex tw-justify-center">
-        <fa-icon icon="location-dot" class="tw-text-primary tw-text-[160px]"></fa-icon>
+        <img src="../../../../assets/images/no-port-anchor.svg" alt="no-port-anchor.svg">
     </div>
 
     <div class="tw-mt-10">
